# GMKBE

./: CMakeLists.txt  README.md  build.sh
baselines/: README.md
baselines/MaximalBiPlex/: .gitignore  CMakeLists.txt  README.md  build.sh  datalist.txt
baselines/MaximalBiPlex/apps/: main.cpp
baselines/MaximalBiPlex/datas/: opsahl_southernwomen.txt  opsahl_ucforum.txt
baselines/MaximalBiPlex/src/biplex/: CMakeLists.txt  biplex.cpp  biplex.h
baselines/MaximalBiPlex/src/utils/: CMakeLists.txt  bigraph.hpp  cmdline.hpp  fastio.hpp  graph.hpp  hash.hpp  linearheap.hpp  load_bipartite.hpp  search_logger.hpp  vertexset.hpp
baselines/SGMD22-MBPE/: .clang-format  CMakeLists.txt  Example.graph
baselines/SGMD22-MBPE/apps/: main.cpp
baselines/SGMD22-MBPE/include/: Util.h  args.hxx  iTraversal.h  recorder.h
baselines/SGMD22-MBPE/include/cpp-btree-1.0.1/: btree.h  btree_container.h  btree_map.h  btree_set.h  btree_test.h  safe_btree.h  safe_btree_map.h  safe_btree_set.h
data/src/: tmp_load.h
include/: args.hxx  for_BFS-HashTableHashTable.cuh  for_BFS-hashHash.cuh  for_BFS.cuh  for_checkmaximality-HashTableHashTable.cuh  for_checkmaximality-hashHash.cuh  for_checkmaximality.cuh  for_generate.cuh  for_special-HashTableHashTable.cuh  for_special-hashHash.cuh  for_special.cuh  for_test.h  gpu_utils.cuh  graph.h  hashTable.cuh  output.cuh  partition.cuh  timer.cuh  utils.h
preprocess/: graph_conver.cpp
src/: main.cu
